--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.1"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.10.6",
