--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,8 +26,7 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-      VITE_SCALEDRONE_CHANNEL_ID: ${{ secrets.VITE_SCALEDRONE_CHANNEL_ID }}
-      VITE_SCALEDRONE_ROOM_NAME: ${{ secrets.VITE_SCALEDRONE_ROOM_NAME }}
+      
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -41,6 +40,9 @@ jobs:
         run: npm install
       - name: Build
         run: npm run build
+        env:
+          VITE_SCALEDRONE_CHANNEL_ID: ${{ secrets.VITE_SCALEDRONE_CHANNEL_ID }}
+          VITE_SCALEDRONE_ROOM_NAME: ${{ secrets.VITE_SCALEDRONE_ROOM_NAME }}
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
